cmake_minimum_required(VERSION 3.9)
project (CSVparse)
if(WIN32)
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
	include_directories("${CMAKE_SOURCE_DIR}/include")
	add_library(CSVparse STATIC src/CSVparse.cpp)
	link_directories("${CMAKE_SOURCE_DIR}/lib")
	add_executable(CSVparse_test src/CSVparse_test.cpp)
	target_link_libraries(CSVparse_test CSVparse)
endif()